<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="First Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="@string/Birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBirthday" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="Address \n"
        android:paddingLeft="8dp"
        android:inputType="textMultiLine"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/Last_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="Last Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textGender"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="81dp"
            android:layout_height="47dp"
            android:text="@string/Male"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:textSize="14sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/textGender"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/Gender"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <TextView
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGender" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="@color/customColor"
        android:text="@string/Select"
        android:textColor="@color/black"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSelectRegister"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/customColor"
        android:text="@string/Register"
        android:textColor="@color/black"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayEditText" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>