<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:ignore="HardcodedText"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/First_Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="172dp"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:background="#efefef"
                android:hint="First Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName" />
        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Last_Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="172dp"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:background="#efefef"
                android:hint="Last Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textGender"
            android:layout_width="71dp"
            android:layout_height="31dp"
            android:layout_marginTop="40dp"
            android:text="@string/Gender"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textGender"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="81dp"
                android:layout_height="47dp"
                android:text="@string/Male"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGender" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/birthdayEditText"
            android:layout_width="252dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:background="#efefef"
            android:hint="@string/Birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBirthday" />

        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="92dp"
            android:layout_height="49dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@color/customColor"
            android:text="@string/Select"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayEditText" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="Address \n"
        android:inputType="textMultiLine"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#efefef"
        android:hint="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/buttonSelectRegister"
            android:layout_width="159dp"
            android:layout_height="54dp"
            android:backgroundTint="@color/customColor"
            android:text="@string/Register"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
             />
    </RelativeLayout>

</LinearLayout>